--- a/api/flyway.conf
+++ b/api/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:postgresql://localhost:5432/drivestats_db
+flyway.url=jdbc:postgresql://postgres:5432/drivestats_db
 flyway.user=casper
 flyway.password=foTVdhgYZzz8bOL6e
 flyway.schemas=public
