--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -8,7 +8,7 @@ click==8.1.7
 dnspython==2.5.0
 ecdsa==0.18.0
 email-validator==2.1.0.post1
-fastapi==0.109.0
+fastapi>=0.100.0
 h11==0.14.0
 httpcore==1.0.2
 httptools==0.6.1
@@ -29,12 +29,12 @@ psycopg2-binary==2.9.9
 psycopg-binary==3.1.17
 psycopg-pool==3.2.1
 pyasn1==0.5.1
-pydantic==2.5.3
+pydantic>=2.0.0
 pydantic-extra-types==2.4.1
-pydantic-settings==2.1.0
+pydantic-settings>=2.0.0
 pydantic_core==2.14.6
 pytest==7.4.4
-python-dotenv==1.0.1
+python-dotenv>=1.0.0
 python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==6.0.1
@@ -46,7 +46,7 @@ starlette==0.35.1
 typing_extensions==4.9.0
 ujson==5.9.0
 urllib3==2.1.0
-uvicorn==0.17.6
+uvicorn>=0.22.0
 uvloop==0.19.0
 watchgod==0.8.2
 websockets==12.0
@@ -55,5 +55,5 @@ PyJWT==2.8.0
 pre-commit
 flake8
 passlib
-slowapi
-mangum==0.17.0
+slowapi>=0.1.7
+mangum>=0.17.0
